force-app/main/default/objects/Framework_Config__mdt/fields/Framework_Name__c.field-meta.xml
<CustomField>
    <fullName>Framework_Name__c</fullName>
    <description>Name of the compliance framework (e.g., GDPR, CCPA, PCI-DSS)</description>
    <label>Framework Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>