force-app/main/default/objects/Framework_Config__mdt/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Email address for compliance notifications</description>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>